--- a/templates/home/signals.html
+++ b/templates/home/signals.html
@@ -18,7 +18,7 @@
 
 <div class="">
     <div class="alert alert-info text-center" role="alert">
-        <strong >This all are computer genrated signals and only for educational porpose.</strong>
+        <strong >This all are computer genrated signals and only for educational purpose.</strong>
     </div>
     <div class="alert alert-warning alert-dismissible fade show" role="alert">
         <strong>Don't rush for signals !</strong> Because mostly signal will show opposite trend , so trade signal only on support and resistance. And do your own analysis.
