--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="{% block dece %}{% endblock dece %}">
-    <meta name="keywords" content="stocks,shares,prediction,tomorrow,price,nse,bse,aistocks">
+    <meta name="keywords" content="stocks,shares,prediction,tomorrow,price,nse,bse,aistocx">
     <title>{% block title %}{% endblock title %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
@@ -31,8 +31,8 @@
                     </span>
                     <a class="navbar-brand me-1 " href="/">
                         <div>
-                            <img src="{% static '/icon/favicon.png' %}" alt="aistocks" width="43" height="30">
-                            <span class=" navbar-brand  fw-bold" >AIStocks.com</span>
+                            <img src="{% static '/icon/favicon.png' %}" alt="aistocx" width="43" height="30">
+                            <span class=" navbar-brand  fw-bold" >AIStocx.com</span>
                         </div>
                     </a>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -87,7 +87,7 @@
     <footer class='my_footer'>
         <div class="pd-4 footer_div row ">
             <div class="col-md-4  p-4">
-                <div class="h1  logo_div"><a href="/">AIStocks.com</a> </div>
+                <div class="h1  logo_div"><a href="/">AIStocx.com</a> </div>
             </div>
             <div class="col-md-8 d-flex  contact_us_outer_div flex-wrap ">
                 <div class="contact_us_div p-3 ">
@@ -112,7 +112,7 @@
                             </svg>
                         </span>
                         <span>
-                            <a href="mailto:net.aistocks@gmail.com">net.aistocks@gmail.com</a> 
+                            <a href="mailto:aistocx@gmail.com">aistocx@gmail.comm</a> 
                         </span>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                 </div>
             </div>
             <div class="mt-3 pt-3 text-center " style="color:#808081;">
-                 &copy; Copyright  AIStocks.com 2022-2023
+                 &copy; Copyright  AIStocx.com 2022-2023
             </div>
         </div>
 
