--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -43,6 +43,9 @@
                             <li class="nav-item">
                                 <a class="nav-link {% if signal_page %} active {% endif %}" href="/signals">Free Signals</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link {% if about_page %} active {% endif %}" href="/aboutUs">About us</a>
+                            </li>
 
                         </ul>
                     </div>
@@ -112,7 +115,7 @@
                             </svg>
                         </span>
                         <span>
-                            <a href="mailto:aistocx@gmail.com">aistocx@gmail.comm</a> 
+                            <a href="mailto:aistocx@gmail.com">aistocx@gmail.com</a> 
                         </span>
                     </div>
                 </div>
