--- a/templates/home/chart.html
+++ b/templates/home/chart.html
@@ -6,6 +6,9 @@
     }
 </style>
 {% endblock style %}
+{% block title %}
+{{symbol}} Chart
+{% endblock title %}
 {% block body %}
 
 <!-- TradingView Widget BEGIN -->
