--- a/templates/home/signals.html
+++ b/templates/home/signals.html
@@ -1,5 +1,8 @@
 {% extends 'home/base.html' %}
 {% load static %}
+{% block title %}
+AIStocx - Free Signals
+{% endblock title %}
 {% block body %}
 
 <div class="jumbotron_div  bg-light rounded-3 ">
