--- a/templates/home/stock.html
+++ b/templates/home/stock.html
@@ -3,7 +3,7 @@
 {{more_data.shortName}}
 {% endblock title %}
 {% block dece %}
-Get prediction tomorrow price of {{more_data.shortName}} for free.
+Get  tomorrow price prediction of {{more_data.shortName}} for free.
 {% endblock dece %}
 {% block body %}
 {% load static %}
