--- a/templates/home/table.html
+++ b/templates/home/table.html
@@ -1,4 +1,5 @@
 {% extends 'home/base.html' %}
+{{name|title}}
 {% block body %}
 <div class="table_overflow_scroll">
     <h2 class="mt-4 ms-2 mb-4 fw-bold">{{name|title}}</h2>
