--- a/staticfiles/home/style.css
+++ b/staticfiles/home/style.css
@@ -24,6 +24,8 @@
     color: var(--primary);
 }
 
+
+
 .marquee_tag {
     background-color: rgb(240, 240, 240);
 }
@@ -426,6 +428,9 @@
     .menu_span svg {
         display: block !important;
     }
+    .table_overflow_scroll{
+        overflow: scroll;
+    }
 
     .navbar-collapse {
         display: block !important;
@@ -464,6 +469,9 @@
         padding: 0;
         
     }
+    .navbar .container-fluid {
+        justify-content: flex-start;
+    }
     .signal_page_svg_div{
         padding-bottom: 1rem;
     }
@@ -472,4 +480,10 @@
     }
 }
 
-/* wave code  */
+/* bootstrap  */
+.navbar>.container, .navbar>.container-fluid, .navbar>.container-lg, .navbar>.container-md, .navbar>.container-sm, .navbar>.container-xl, .navbar>.container-xxl {
+    display: flex;
+    flex-wrap: inherit;
+    align-items: center;
+    justify-content: flex-start !important;
+}
