--- a/templates/home/table.html
+++ b/templates/home/table.html
@@ -1,4 +1,7 @@
 {% extends 'home/base.html' %}
+{% block title %}
+{{name|title}}
+{% endblock title %}
 {{name|title}}
 {% block body %}
 <div class="table_overflow_scroll">
