--- a/templates/home/signals.html
+++ b/templates/home/signals.html
@@ -43,7 +43,7 @@ AIStocx - Free Signals
                             <div >
                                 <h3 class="card-title fw-bold 8"><span
                                         class='{{signal.color}}'>{{signal.position|title}}</span><span class="primary">
-                                            <a href="getStock/{{signal.symbol.symbol}}" class='symbol_name_a '>{{signal.symbol.title}}</a>
+                                            <a href="getTicker/{{signal.symbol.symbol}}" class='symbol_name_a '>{{signal.symbol.title}}</a>
                                         </span> @{{signal.price}}
                                 </h3>
                                 <div class='text-muted '>
