--- a/templates/home/table.html
+++ b/templates/home/table.html
@@ -22,7 +22,7 @@
                 
                 {% if key == 'Symbol' %}
                 <td>
-                  <a href="/getStock/{{value}}" class='primary_link'>{{value}}</a>
+                  <a href="/getTicker/{{value}}" class='primary_link'>{{value}}</a>
                 </td>
                 {% elif key == 'color' %}
                 {% elif key == 'Change' or key == '%' or key == 'Volume' %}
